log/build_2025-02-18_21-07-11/me495_yolo/stderr.log
  File "/home/catherine-maglione/yolo_backup/install/me495_yolo/lib/python3.12/site-packages/me495_yolo/yolo.py", line 418
    t.header.frame_id = 'turtlebot_blue_object'  e
                                                 ^
SyntaxError: invalid syntax

